--- a/index.html
+++ b/index.html
@@ -8,12 +8,22 @@
 <table>
     <tr>
         <td>
-            <img src="page/page1to2.png" width="3000">
+            <img src="page/page1.png" width="1000">
         </td>
     </tr>
     <tr>
         <td>
-            <img src="page/page3to4.png" width="3000">
+            <img src="page/page2.png" width="1000">
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <img src="page/page3.png" width="1000">
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <img src="page/page4.png" width="1000">
         </td>
     </tr>
 </table>
